31. Oct 2012 Christoph Thielecke <crissi99@gmx.de>
	- export fixed (#3576090)

03. Aug 2012 Christoph Thielecke <crissi99@gmx.de>
	- crash at search on duplicates fixed

01. Aug 2012 Christoph Thielecke <crissi99@gmx.de>
	- adding history entry on save as fixed
	- version increased to 2.1

31. Jul 2012 Christoph Thielecke <crissi99@gmx.de>
	- writing utf8 encoded filenames and content fixed (#3550586)
	- setting media name with utf8 chars fixed
	- detection of cd/dvd media name fixed
	- detection if cd/dvd already mounted on linux fixed (#3535884)
	- device path can now also specified at settings for cd/dvd device

29. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- crash on start fixed if trayicon is disabled (#3529967)

24. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- crash at scanning archive with special names in archive list fixed
	- detection of file extension on non win32 systems fixed

18. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- set medianame on adding new media at cd/dvd type fixed
	- use cdrom path for cd/dvd instead of selected path in tree
	- menu entries for resort catalog in descending order (number, time) added
	- loading some settings fixed (content, date start, start end at find dialog) 

17. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- sort by number, time and type fixed
	- sort state will now saved to catalog
	- display sort state in commwidget added

12. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- datatype on reading at reading double from xml fixed
	- code cleanup
	- set special config settings on autoload on db correctly
	- create pww on mainwidget instead on guibase
	- display progressdialog on save/saveas added
	- progressdialog fixes
	- speedup catalog line detection on catalog reading
	- status info about supported image extensions on selreadable dialog added
	- display supported image extensions on console if debug info is enabled
	- keep ".." entry always as first entry on sort listview on change on 3. column